css/main.css
@font-face {
    font-family: "CSpireBold";
    src: url('fonts/ProximaNovaSoft-Bold.woff') format('woff');
    font-weight: "normal";
    font-style: "normal";
}

@font-face {
    font-family: "CSpireMed";
    src: url('fonts/ProximaNovaSoft-Medium.woff') format('woff');
    font-weight: "normal";
    font-style: "normal";
}

@font-face {
    font-family: "CSpire";
    src: url('fonts/ProximaNovaSoft-Regular.woff') format('woff');
    font-weight: "normal";
    font-style: "normal";
}

html {
    font-family: "CSpire" !important;
    background: #01c0f3;
}

body {
    font-family: "CSpire" !important;
}

.white-text {
    color: white !important;
    border-color: white !important;
}

.blue-text {
    color: #01c0f3 !important;
}

.navy-text {
    color: #00306a !important;
}

.dark-gray-text {
    color: #434547 !important;
}

.o1 {
    opacity: 1 !important;
}

.mt-10 {
    margin-top: 10px;
}

.my-25 {
    margin-top: 25px;
    margin-bottom: 25px;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff !important;
}

